tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_numeric_generics_type_kind_mismatch/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: The numeric generic is not of type `u32`
  ┌─ src/main.nr:9:15
  │
9 │         foo::<J>()
  │               - expected `u32`, found `u16`
  │

Aborting due to 1 previous error
